# JotterJoy

./: .env  .gitignore  index.html  jotterjoy.spec  pyproject.toml  settings.json
.github/workflows/: static.yml
css/: main.63d758e4d6a9.css
js/: main.26769b514691.js
src/app/: main.py
src/app/routers/: documents.py
src/app/services/: grammar.py  spelling.py  tagging.py  title.py
src/app/utils/: __init__.py  ai_service.py  groq_service.py  openai_like_service.py  prompt_utils.py  text_utils.py
src/jotterjoy/app/: main.py  pyinstaller.py
src/jotterjoy/app/routers/: documents.py
src/jotterjoy/app/services/: spelling.py  tagging.py  title.py
src/jotterjoy/app/utils/: __init__.py  ai_service.py  groq_service.py  openai_like_service.py  prompt_utils.py
src/jotterjoy/models/: document_model.py
src/jotterjoy/prompts/: generate_title.txt  tagging.txt  tagging.txt.v1
src/models/: llm_model.py
src/prompts/: fix_text.txt  generate_title.txt  tagging.txt
